Mangle __parameters in __annotations__ dict properly. Issue #20625.